# drecognize

./: CMakeLists.txt  Digit.hpp  DigitRecognition.cpp  DigitRecognition.hpp  ILocation.hpp  ImageProcessing.cpp  ImageProcessing.hpp  Position.cpp  Position.hpp  Recognize.cpp  Recognize.hpp  Target.cpp  Target.hpp  main.cpp
